<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/unnamed">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="335dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textColor="#fff"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_phone"
                android:textColor="#fff"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/your_phone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="#fff"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="335dp"
        android:layout_height="284dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_member"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Type_VIP"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/is_vip"
                android:textColor="#fff"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Type_Normal"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/is_normal"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_ticker"
            android:textColor="#fff"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Type_bed"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/type_bed"
                android:textColor="#fff"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/Type_chair"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/type_chair"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cb_dichvu"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dichvu"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="66dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/thanh_toan"
                android:textColor="#fff"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/type_money"
                android:layout_width="118dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#fff"
                android:entries="@array/thanhtoan_array"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </TableRow>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.120000005">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_xacnhan"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#4286f4"
                android:text="@string/btn_ok"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Space
                android:layout_width="95dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_huybo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#f44141"
                android:text="@string/btn_cancel"
                android:textColor="#fff"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>